Column fix, newlineFixes, gapPXfix

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -47,37 +47,31 @@ body section article q {
 }
 
 @media screen and (min-width: 640px) {
-  body section .one {
-    grid-row: 1;
-    grid-column-start: 1;
-    grid-column-end: 3;
+  body section {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
   }
-  body section .two {
-    grid-row: 1;
-    grid-column-start: 3;
-    grid-column-end: 4;
+  body section .daniel {
+    grid-column: 1/3;
   }
-  body section .three {
-    grid-row: 2;
-    grid-column-start: 1;
-    grid-column-end: 2;
+  body section .jonathan {
+    grid-column: 3/4;
   }
-  body section .four {
-    grid-row: 2;
-    grid-column-start: 2;
-    grid-column-end: 4;
+  body section .jeanette {
+    grid-column: 1;
   }
-  body section .five {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 4;
-    grid-column-end: 4;
+  body section .patrick {
+    grid-column: 2/4;
+  }
+  body section .kira {
+    grid-column: 4;
+    grid-row: 1/3;
   }
 }
 @media screen and (max-width: 640px) {
   body section {
     display: grid;
-    gap: 25px;
+    gap: 30px;
     margin: 50px auto;
   }
 }
