--- a/assets/styles/breakpoints/_breakpoints.scss
+++ b/assets/styles/breakpoints/_breakpoints.scss
@@ -1,31 +1,24 @@
 @media screen and (min-width: 640px) {
   body {
     section {
-      .one {
-        grid-row: 1;
-        grid-column-start: 1;
-        grid-column-end: 3;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: 1fr 1fr;
+
+      .daniel {
+        grid-column: 1/3;
       }
-      .two {
-        grid-row: 1;
-        grid-column-start: 3;
-        grid-column-end: 4;
+      .jonathan {
+        grid-column: 3/4;
       }
-      .three {
-        grid-row: 2;
-        grid-column-start: 1;
-        grid-column-end: 2;
+      .jeanette {
+        grid-column: 1;
       }
-      .four {
-        grid-row: 2;
-        grid-column-start: 2;
-        grid-column-end: 4;
+      .patrick {
+        grid-column: 2/4;
       }
-      .five {
-        grid-row-start: 1;
-        grid-row-end: 3;
-        grid-column-start: 4;
-        grid-column-end: 4;
+      .kira {
+        grid-column: 4;
+        grid-row: 1/3;
       }
     }
   }
@@ -34,7 +27,7 @@
   body {
     section {
       display: grid;
-      gap: 25px;
+      gap: 30px;
       margin: 50px auto;
     }
   }
